[gd_scene load_steps=16 format=3 uid="uid://c4msnrglp0c7k"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_dvxe8"]
[ext_resource type="Texture2D" uid="uid://b0a2wp7vfgypx" path="res://assets/backgrounds/spr_stars01.png" id="2_2ecbk"]
[ext_resource type="Texture2D" uid="uid://dm4f7lcfr378o" path="res://assets/backgrounds/GalaxyUno2.png" id="2_3vcsy"]
[ext_resource type="PackedScene" uid="uid://ht37v0usk801" path="res://Scenes/level_bg.tscn" id="2_4og1k"]
[ext_resource type="Texture2D" uid="uid://d18cghvgbmus0" path="res://assets/backgrounds/spr_stars02.png" id="3_d6183"]
[ext_resource type="LabelSettings" uid="uid://c60fmybfv021m" path="res://Scenes/title-red-72.tres" id="4_14bi8"]
[ext_resource type="PackedScene" uid="uid://mimrcpg1n0sc" path="res://Scenes/sun.tscn" id="5_so1n2"]
[ext_resource type="Texture2D" uid="uid://8yaqfj2pup6t" path="res://assets/ui/yellow_button00.png" id="6_meu2g"]
[ext_resource type="Texture2D" uid="uid://c6bxv142xrjw5" path="res://assets/ui/red_button00.png" id="7_7evgi"]
[ext_resource type="LabelSettings" uid="uid://dgey6jbx833nl" path="res://Scenes/button-text-white.tres" id="8_8bj0v"]
[ext_resource type="FontFile" uid="uid://btkveqgboeckf" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="8_034v6"]
[ext_resource type="Texture2D" uid="uid://dae522f57lu27" path="res://assets/ui/red_button01.png" id="9_713ea"]
[ext_resource type="AudioStream" uid="uid://c2ptaevxktudd" path="res://assets/sounds/loops/TitleScreen.mp3" id="12_1gb2p"]
[ext_resource type="PackedScene" uid="uid://e0dhjac2qeu7" path="res://Scenes/Enemies/asteroid_manager.tscn" id="14_g7tps"]

[sub_resource type="LabelSettings" id="LabelSettings_cgn7e"]
font = ExtResource("8_034v6")
font_size = 34

[node name="Main" type="Node2D"]
script = ExtResource("1_dvxe8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="LevelBg" parent="CanvasLayer" instance=ExtResource("2_4og1k")]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -256.0
offset_right = 7.0
offset_bottom = 544.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3vcsy")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -730.0
offset_top = -880.0
offset_right = 730.0
offset_bottom = 880.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ecbk")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -695.0
offset_top = -870.0
offset_right = 765.0
offset_bottom = 890.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_d6183")

[node name="AsteroidManager" parent="CanvasLayer" instance=ExtResource("14_g7tps")]
demo_mode = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer3" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Sun" parent="CanvasLayer/MarginContainer/VBoxContainer3/VBoxContainer2" instance=ExtResource("5_so1n2")]
z_index = -1
position = Vector2(341, 83)
scale = Vector2(2.1, 2.1)
offset = Vector2(-19, 2.08165e-12)

[node name="Spacer" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Space Ace"
label_settings = ExtResource("4_14bi8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_7evgi")
texture_pressed = ExtResource("6_meu2g")
texture_hover = ExtResource("9_713ea")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = ExtResource("8_8bj0v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_7evgi")
texture_pressed = ExtResource("6_meu2g")
texture_hover = ExtResource("9_713ea")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("8_8bj0v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="CanvasLayer/MarginContainer"]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CanvasLayer2"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_bottom = 243.0
grow_horizontal = 0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer"]
layout_mode = 2
color = Color(1, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(M)usic"
label_settings = SubResource("LabelSettings_cgn7e")

[node name="SoundLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(S)ounds"
label_settings = SubResource("LabelSettings_cgn7e")

[node name="GodModeLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(G)od Mode"
label_settings = SubResource("LabelSettings_cgn7e")

[node name="ResestHSLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(R)eset HS"
label_settings = SubResource("LabelSettings_cgn7e")

[node name="InGameLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
-- In Game --"
label_settings = SubResource("LabelSettings_cgn7e")
horizontal_alignment = 1

[node name="KeysLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(Arrows) Move
(Shift) Shoot
(Space) Pause
(Q) Quit"
label_settings = SubResource("LabelSettings_cgn7e")

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/MarginContainer"]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = -600.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 22

[node name="HighScoreTitleLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HIGH SCORE
"
label_settings = ExtResource("8_8bj0v")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
label_settings = ExtResource("8_8bj0v")
vertical_alignment = 1

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_1gb2p")
volume_db = -8.0

[node name="sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="button_up" from="CanvasLayer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
